# ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ãƒ»ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚ºãƒ»ãƒ¢ãƒ³ã‚­ãƒ¼ï¼ˆMessage Windows Monkeyï¼›ä¼è¨€çª“ãŸã¡ã®çŒ¿ï¼‰
extends Node


# ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼
# ãƒ¡ãƒ¢ãƒªé–¢é€£
# ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼

# å…ˆç¥–ã®è¾æ›¸ã‚­ãƒ£ãƒƒã‚·ãƒ¥
var ancestors = {}


# ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼
# ãƒãƒ¼ãƒ‰ãƒ»ãƒ‘ã‚¹é–¢é€£
# ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼


# è‡ªèº«å–å¾—
func monkey():
	return self


# ç›£ç£ãƒãƒ–å–å¾—
func of_staff():
	return MonkeyHelper.find_ancestor_child(
			self,
			&"ğŸ‘¥Staff/ğŸµMonkey",
			self.ancestors)


# ã‚­ãƒ£ãƒ³ãƒã‚¹ãƒ»ãƒ¬ã‚¤ãƒ¤ãƒ¼å–å¾—
func get_canvas_layer(message_window_name):
	return self.monkey().of_staff().programmer().owner_node().telops.find_node("MessageWindow_" + message_window_name)


# ãƒ†ã‚­ã‚¹ãƒˆãƒ–ãƒ­ãƒƒã‚¯
func get_text_block(message_window_name):
	return self.get_canvas_layer(message_window_name).get_node("TextBlock")


# ä¸‰è§’å½¢ã®æ–‡æœ«ãƒ–ãƒªãƒ³ã‚«ãƒ¼
func get_blinker_triangle(message_window_name):
	return self.get_canvas_layer(message_window_name).get_node("TextBlock/BlinkerTriangle")


# ä¸‹ç·šã®æ–‡æœ«ãƒ–ãƒªãƒ³ã‚«ãƒ¼
func get_blinker_underscore(message_window_name):
	return self.get_canvas_layer(message_window_name).get_node("TextBlock/BlinkerUnderscore")


# é¸æŠè‚¢ã‚«ãƒ¼ã‚½ãƒ«
func get_choices_cursor(message_window_name):
	return self.get_canvas_layer(message_window_name).get_node("TextBlock/ChoicesCursor")
